--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
             <div class="form-control">
                 <label>Confirm Password</label>
-                <input type="text" id="confirm" placeholder="Enter Your Password Again" autocomplete="off">
+                <input type="password" id="confirmPass" placeholder="Enter Your Password Again" autocomplete="off">
                 <i class="fas fa-check-circle"></i>
                 <i class="fas fa-exclamation-circle"></i>
                 <small>Error Msg</small>
@@ -55,5 +55,122 @@
             <input type="submit" value="submit" class="btn">
         </form>
     </div>
+
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <!--JavaScript-->
+    <script>
+        const form = document.getElementById('form');
+        const username = document.getElementById('username');
+        const email = document.getElementById('email');
+        const phone = document.getElementById('phone');
+        const password = document.getElementById('password');
+        const confirmPass = document.getElementById('confirmPass');
+
+        form.addEventListener('submit', (event) => {
+            event.preventDefault();
+            validation();
+        })
+
+        const sendData = (usernameVal,successRate,count) => {
+            if(successRate === count){
+                // alert('registration successful');
+                swal("Welcome! "+usernameVal, "Registration Successful", "success");
+            }
+        }
+
+        //final data validation
+        const successMsg = (usernameVal) => {
+            let formControl = document.getElementsByClassName('form-control');
+            let count = formControl.length - 1;
+            for (let i = 0; i < formControl.length; i++) {
+                if(formControl[i].className === 'form-control success'){
+                    let successRate = 0 + i;
+                    sendData(usernameVal,successRate,count);
+                }else{
+                return false;
+              }
+            }
+        }
+
+        //validation function 
+        const validation = () => {
+            const usernameVal = username.value.trim();
+            const emailVal = email.value.trim();
+            const phoneVal = phone.value.trim();
+            const passwordVal = password.value.trim();
+            const confirmPassVal = confirmPass.value.trim();
+
+            //validate username
+            if(usernameVal === ""){
+                setErrorMsg(username,'username cannot be blank');
+            }else if(usernameVal.length <= 2){
+                setErrorMsg(username,'username minimum 3 char');
+            }else{
+                setSuccessMsg(username);
+            }
+
+            //validate email
+            if(emailVal === ""){
+                setErrorMsg(email,'email cannot be blank');
+            }else if(!isEmail(emailVal)){
+                setErrorMsg(email,'Not a valid Email');
+            }else{
+                setSuccessMsg(email);
+            }
+
+              //validate phone
+              if(phoneVal === ""){
+                    setErrorMsg(phone,'phone cannot be blank');
+                }else if((phoneVal.length != 11)){
+                    setErrorMsg(phone,'Not a valid phone number');
+                }else{
+                    setSuccessMsg(phone);
+                }
+
+                //validate password
+               if(passwordVal === ""){
+                    setErrorMsg(password,'password cannot be blank');
+                }else if((passwordVal.length <= 5)){
+                    setErrorMsg(password,'Minimum 6 char');
+                }else{
+                    setSuccessMsg(password);
+                }
+
+                //validate confirmPass
+               if(confirmPassVal === ""){
+                    setErrorMsg(confirmPass,'confirm password cannot be blank');
+                }else if((passwordVal != confirmPassVal)){
+                    setErrorMsg(confirmPass,'password are not matching');
+                }else{
+                    setSuccessMsg(confirmPass);
+                }
+
+                successMsg(usernameVal);
+        }
+
+        //more email validate
+        const isEmail = (emailVal) => {
+            var atSymbol = emailVal.indexOf("@");
+            if(atSymbol < 1) return false;
+            var dot = emailVal.lastIndexOf('.');
+            if(dot <= atSymbol + 2) return false;
+            if(dot === emailVal.length - 1) return false;
+            return true;
+        }
+
+        //set error msg
+        function setErrorMsg(input, error){
+            const formControl = input.parentElement;
+            const small = formControl.querySelector('small');
+            formControl.className = "form-control error";
+            small.innerText = error;
+        }
+
+        //set success msg
+        function  setSuccessMsg(input) {
+            const formControl = input.parentElement;
+            formControl.className = "form-control success";
+        }
+    </script>
 </body>
 </html>
